Fix spacing of items without descriptions

--- a/app/styles/components/card.scss
+++ b/app/styles/components/card.scss
@@ -38,6 +38,10 @@ ul.card-list {
       font-weight: 500;
       margin: 0;
       margin-bottom: .5em;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
     > a {
